--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,4 +31,5 @@
     <string name="profile_picture">Profile Picture</string>
     <string name="profile">Profile</string>
     <string name="all_users_btn">All Users</string>
+    <string name="current_status">Current Status</string>
 </resources>
