--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,4 +45,7 @@
     <string name="requests">Requests</string>
     <string name="reqSent">Request Sent</string>
     <string name="sentReqComment">You have already sent a request to %s</string>
+    <string name="action_send">Send</string>
+    <string name="prompt_msg">Type a message</string>
+    <string name="sample_message">Hello!</string>
 </resources>
